deploy/kubernetes/overlays/staging/namespace-patch.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dcarbn-staging
  labels:
    app.kubernetes.io/part-of: dcarbn-carbon-platform
    environment: staging
    region-role: staging
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
