deploy/kubernetes/overlays/staging/rollout-patch.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: dcarbn-backend
  namespace: dcarbn
spec:
  replicas: 2
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: dcarbn-frontend
  namespace: dcarbn
spec:
  replicas: 2
